[package]
name = "blackhole"
version = "0.1.0"
edition = "2021"

[dependencies]
rocksdb = "0.22"
criterion = "0.5"
rand = "0.8"
lmdb = "0.8"
histogram = "0.11"

[[bench]]
name = "rocksdb_benchmarks"
harness = false

[[bench]]
name = "lmdb_benchmarks"
harness = false

[[bin]]
name = "perf_test"
path = "src/perf_test/main.rs"

[[bin]]
name = "training"
path = "src/training/main.rs"

[[bin]]
name = "serving"
path = "src/serving/main.rs"
