[package]
name = "blackhole"
version = "0.1.0"
edition = "2021"

[dependencies]
rocksdb = "0.22"
criterion = "0.5"
rand = "0.8"
lmdb = "0.8"
histogram = "0.11"
arrow = "53.2"
arrow-flight = "53.2"
futures = "0.3"
tonic = "0.12"
tokio = { version = "1.35", features = ["full"] }
bytes = "1.8"
pyo3-arrow = "0.6"
clap = { version = "4.4", features = ["derive"] }
lazy_static = "1.5"
[[bench]]
name = "rocksdb_benchmarks"
harness = false

[[bench]]
name = "lmdb_benchmarks"
harness = false

[[bin]]
name = "perf_test"
path = "src/perf_test/main.rs"

[[bin]]
name = "training"
path = "src/training/main.rs"

[[bin]]
name = "serving"
path = "src/serving/main.rs"
